# litho

./: CHANGELOG.md  Cargo.toml  README.md  demo.cast  refactor-rules.md
.github/workflows/: build.yaml
scripts/: record-demo.sh
src/: cancel.rs  cli_cancel.rs  cli_output.rs  cli_simulate.rs  devices.rs  io_backend.rs  lib.rs  main.rs  main_tui.rs  progress.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs  windows_devices.rs
src/tui/: app.rs  helpers.rs  launch.rs  layout.rs  logging.rs  mod.rs  operation.rs  privilege.rs  ui.rs
