[package]
name = "liblitho"
version = "0.1.0"
edition = "2021"
authors = ["Girish Joshi <mail@girishjoshi.io>"]
license = "MIT"
description = "cli tool to flash/clone the images to storage devices"
readme = "README.md"
keywords = ["cli", "os", "image", "clone", "flash"]
repository = "https://github.com/girish946/litho"
categories = ["command-line-interface", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "litho"
path = "src/main.rs"

[[bin]]
name = "litho-tui"
path = "src/main_tui.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["full", "tracing"] }
sha2 = "0.10.8"
libc = "0.2.152"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mio = "0.8.11"
simple-pub-sub = "0.1.4"
env_logger = "0.11.3"
rust-lzma = "0.6.0"
tempfile = "3.10.1"
anyhow = "1.0"
log = "0.4"
openssl = {version= "0.10.75", features=["vendored"]}
ratatui = "0.28"
crossterm = "0.28"
fpicker = "0.1.4"